--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ Ihre Heilpraxis für Berlin und Potsdam.
         </section>
         <section class="eight columns">
             <article>
-              <p> <strong>Fußreflexzonentherapie/ Massage / Selbstheilung - 23./24.03.2018</strong><br>
+              <p> <strong>Fußreflexzonentherapie/ Massage / Selbstheilung - auf Anfrage</strong><br>
               </p>
               <p> „Wege, sich selbst zu unterstützen“ Aufbau I<br>Einführung in die Zusammenhänge von Körper Geist und Seele, Praxisorientierter Einstieg in die Fuß- und Handreflexzonenmassage <a href="schule/FussAufbau1.html"> <br />
                 weitere Infos </a></p>
@@ -173,8 +173,8 @@ Ihre Heilpraxis für Berlin und Potsdam.
         </section>
         <section class="eight columns">
             <article>
-              <p><a href="schule/FussreflexSchule.html"><strong>20.-22.04.2018 Fußreflexzonentherapie Grundkurs I</strong></a><strong><a href="praxis/angebote/infoabend.html">&nbsp;</a></strong><br>
-                <a href="praxis/angebote/infoabend.html"><strong>09.-11.11.2018 </strong></a><a href="schule/FussreflexSchule.html"><strong>Fußreflexzonentherapie Grundkurs II</strong></a><a href="praxis/angebote/infoabend.html"></a><br>
+              <p><a href="schule/FussreflexSchule.html"><strong>auf Anfrage Fußreflexzonentherapie Grundkurs I</strong></a><strong><a href="praxis/angebote/infoabend.html">&nbsp;</a></strong><br>
+                <a href="praxis/angebote/infoabend.html"><strong>auf Anfrage </strong></a><a href="schule/FussreflexSchule.html"><strong>Fußreflexzonentherapie Grundkurs II</strong></a><a href="praxis/angebote/infoabend.html"></a><br>
                 <a href="schule/FussreflexSchule.html"><strong>Januar 2019 Fußreflexzonentherapie Grundkurs III</strong></a><a href="praxis/angebote/infoabend.html"></a><br>
               </p>
               <p><a href="schule/FussreflexSchule.html">weitere Infos</a> </p>
