--- a/praxis/angebote/infoabend.html
+++ b/praxis/angebote/infoabend.html
@@ -162,7 +162,7 @@
 </ul>
         
         </nav>		
-        <p>Copyright © 2015 Heilpraxis Sabrina Kläffling. All rights reserved.</p>
+        <p>Copyright © 2020 Heilpraxis Sabrina Richter. All rights reserved.</p>
       </div>
     </footer>
 
