--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Heilpraxis Sabrina Kläffling - Potsdam und Berlin, Heilpraktikerin, Schule für Fußreflexzonentherapie und Heipraktiker</title>
+<title>Heilpraxis Sabrina Richter - Potsdam und Berlin, Heilpraktikerin, Schule für Fußreflexzonentherapie und Heipraktiker</title>
 <link type="text/css" href="StyleSheets/ModuleStyleSheets.css" rel="StyleSheet" />
 <script type="text/javascript">var jslang='DE';</script>
 <link href="stylesheets/base.css" type="text/css" rel="stylesheet" />
