--- a/schule/anmeldungfuss.html
+++ b/schule/anmeldungfuss.html
@@ -5,7 +5,7 @@
   <!-- BC_OBNW -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Schule für Heilpraktiker Sabrina Kläffling - Potsdam</title>
+<title>Schule für Heilpraktiker Sabrina Richter - Potsdam</title>
 <link type="text/css" href="../StyleSheets/ModuleStyleSheets.css" rel="StyleSheet" />
 <script type="text/javascript">var jslang='DE';</script>
 <link href="../stylesheets/base.css" type="text/css" rel="stylesheet" />
@@ -88,7 +88,7 @@
      <p>Bitte Kontaktieren Sie mich über e-mail, telefonisch oder persönlich in meiner Praxis. <br>
        Gern beantworte ich Ihre Fragen. </p>
      <p><br>
-       Heilpraxis Sabrina Kläffling <br>
+       Heilpraxis Sabrina Richter <br>
        Lessingstraße 47 <br>
        14482 Potsdam </p>
      <p><br>
@@ -125,7 +125,7 @@
 </ul>
         
         </nav>		
-        <p>Copyright © 2020 Heilpraxis Sabrina Kläffling. All rights reserved.</p>
+        <p>Copyright © 2020 Heilpraxis Sabrina Richter. All rights reserved.</p>
       </div>
     </footer>
 
