--- a/schule/index.html
+++ b/schule/index.html
@@ -5,7 +5,7 @@
   <!-- BC_OBNW -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Schule für Heilpraktiker Sabrina Kläffling - Potsdam</title>
+<title>Schule für Heilpraktiker Sabrina Richter - Potsdam</title>
 <link type="text/css" href="../StyleSheets/ModuleStyleSheets.css" rel="StyleSheet" />
 <script type="text/javascript">var jslang='DE';</script>
 <link href="../stylesheets/base.css" type="text/css" rel="stylesheet" />
@@ -149,7 +149,7 @@
 </ul>
         
         </nav>		
-        <p>Copyright © 2020 Heilpraxis Sabrina Kläffling. All rights reserved.</p>
+        <p>Copyright © 2020 Heilpraxis Sabrina Richter. All rights reserved.</p>
       </div>
     </footer>
 
