--- a/schule/FussAufbau1.html
+++ b/schule/FussAufbau1.html
@@ -180,7 +180,7 @@
 </ul>
         
         </nav>		
-        <p>Copyright © 2020 Heilpraxis Sabrina Kläffling. All rights reserved.</p>
+        <p>Copyright © 2020 Heilpraxis Sabrina Richter. All rights reserved.</p>
       </div>
     </footer>
 
