--- a/texte/contact.html
+++ b/texte/contact.html
@@ -82,7 +82,7 @@
         <h3>Kontakt</h3>
         <p><strong>Sie erreichen mich &uuml;ber e-mail, telefonisch oder pers&ouml;nlich in meiner Praxis. </strong></p>
         <p><strong>Gern beantworte ich Ihre Fragen.</strong></p>
-        <p>Heilpraxis Sabrina Kl&auml;ffling<br />
+        <p>Heilpraxis Sabrina Richter<br />
         Lessingstra&szlig;e 47<br />
         14482 Potsdam</p>
         <table width="90%" border="0">
@@ -94,7 +94,7 @@
                 </tr>
                 <tr>
                     <td>mail:</td>
-                    <td><p>                    natur@heilpraxis-babelsberg.de</p></td>
+                    <td><p>natur@heilpraxis-babelsberg.de</p></td>
                     <td>&nbsp;</td>
                 </tr>
                 <tr>
