--- a/schule/index.html
+++ b/schule/index.html
@@ -19,7 +19,7 @@
     <![endif]-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="google-site-verification" content="ASpTtXY4dP4v8-neGafleWOXo-vAKtsqGH0yfkPHD5U" />
-<meta name="description" content="Heilpraxis Sabrina Kl&auml;ffling Potsdam Babelsberg" />
+<meta name="description" content="Heilpraxis Sabrina Richter Potsdam Babelsberg" />
 </head>
 <body>
 
@@ -29,7 +29,7 @@
     <header class="page">
       <div class="container">
         <div class="sixteen columns logo">
-          <h3><a href="../index.html">Heilpraxis Sabrina Kl&auml;ffling</a></h3>
+          <h3><a href="../index.html">Heilpraxis Sabrina Richter</a></h3>
           
           <div class="menu full">
           
