--- a/texte/contact.html
+++ b/texte/contact.html
@@ -5,7 +5,7 @@
   <!-- BC_OBNW -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Heilpraxis Sabrina kl&auml;ffling- Kontact</title>
+<title>Heilpraxis Sabrina Richter- Kontact</title>
 <link type="text/css" href="../StyleSheets/ModuleStyleSheets.css" rel="StyleSheet" />
 <script type="text/javascript">var jslang='DE';</script>
 <link href="../stylesheets/base.css" type="text/css" rel="stylesheet" />
@@ -34,7 +34,7 @@
     <header class="page">
       <div class="container">
         <div class="sixteen columns logo">
-          <h3><a href="../index.html">Heilpraxis Sabrina Kl&auml;ffling</a></h3>
+          <h3><a href="../index.html">Heilpraxis Sabrina Richter</a></h3>
           
           <div class="menu full">
           
@@ -115,7 +115,7 @@
         <small><a href="https://maps.google.de/maps?f=q&amp;source=embed&amp;hl=de&amp;geocode=&amp;q=Lessingstra%C3%9Fe+47,+Potsdam&amp;aq=&amp;sll=52.394529,13.107058&amp;sspn=0.006861,0.018754&amp;t=m&amp;ie=UTF8&amp;hq=&amp;hnear=Lessingstra%C3%9Fe+47,+14482+Potsdam,+Brandenburg&amp;ll=52.394511,13.107033&amp;spn=0.018331,0.036478&amp;z=14&amp;iwloc=A" style="color: #0000ff; text-align: left;">Gr&ouml;&szlig;ere Kartenansicht</a></small></p>
         <h4>Impressum</h4>
         <p>F&uuml;r diese Pr&auml;sentation im Sinne des geltenden Rechts ist verantwortlich:</p>
-        <p>Sabrina Kl&auml;ffling, Heilpraktikerin, Lessingstr 47, <br />
+        <p>Sabrina Richter, Heilpraktikerin, Lessingstr 47, <br />
         14482 Potsdam, Tel.: 0331 235 4 661</p>
         <p>Steuer-Nr: 046/237/01374</p>
         <p>Berufst&auml;ndige Regeln: Heilpraktikergesetz, Berufsordnung der Heilpraktiker, Infektionsschutzgesetz, Werbemittelgesetz<br />
