--- a/praxis/angebote/infoabend.html
+++ b/praxis/angebote/infoabend.html
@@ -18,7 +18,7 @@
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta name="description" content="Heilpraxis Sabrina Kl&auml;ffling Potsdam Babelsberg" />
+<meta name="description" content="Heilpraxis Sabrina Richter Potsdam Babelsberg" />
 </head>
 <body>
 
@@ -37,7 +37,7 @@
     <header class="page">
       <div class="container">
         <div class="sixteen columns logo">
-          <h3><a href="../../index.html">Heilpraxis Sabrina Kl&auml;ffling</a></h3>
+          <h3><a href="../../index.html">Heilpraxis Sabrina Richter</a></h3>
           
           <div class="menu full">
           
