--- a/schule/ausbildung.html
+++ b/schule/ausbildung.html
@@ -40,7 +40,7 @@ Vermittelt werden die schulmedizinischen Grundlagen entsprechend der Anforderung
     <header class="page">
       <div class="container">
         <div class="sixteen columns logo">
-          <h3><a href="../index.html">Heilpraxis Sabrina Kl&auml;ffling</a></h3>
+          <h3><a href="../index.html">Heilpraxis Sabrina Richter</a></h3>
           
           <div class="menu full">
           
