--- a/texte/about.html
+++ b/texte/about.html
@@ -34,7 +34,7 @@
     <header class="page">
       <div class="container">
         <div class="sixteen columns logo">
-          <h3><a href="../index.html">Heilpraxis Sabrina Kl&auml;ffling</a></h3>
+          <h3><a href="../index.html">Heilpraxis Sabrina Richter</a></h3>
           
           <div class="menu full">
           
