--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ window.cookieconsent.initialise({
 
 Ihre Heilpraxis für Berlin und Potsdam. 
         Meine Schwerpunkte liegen in der Schmerztherapie und Fußreflexzonentherapie (Fußreflex Massage). 
-        Weiterhin bieten wir die Behandlung nach dem Fasziendistorsionsmodell (FDM), 
+        Weiterhin bieten wir die Behandlung nach dem Fasziendistorsionsmodell (FDM), kinesiologische Tape Therapie,
         Ohrakupunktur, Chiropraktik, manuelle Neurotherapie, Naturheilverfahren &amp; Massagen,
 		Entspannungstherapie / Meditation an. 
         Ein zweiter Schwerpunkt ist die Ausbildung in Fußreflexzonentherapie und die Prüfungsvorbereitung für Heilpraktiker
@@ -130,6 +130,7 @@ Ihre Heilpraxis für Berlin und Potsdam.
             <article>
                 <h3>Heilpraxis</h3>
                 <p>Fußreflexzonentherapie&nbsp;<br>
+                  kinesiologische Tape Therapie<br>
                   Behandlung nach dem  Fasziendistorsionsmodell<br>
                     (FDM &nbsp;nach S. Typaldos) <br>
                   Ohrakupunktur <br>
